--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/HomeDrawerView.xaml
@@ -109,7 +109,8 @@
                 <Grid Grid.Row="1" IsEnabled="{Binding CheckingForUpdates, Converter={StaticResource InverseBooleanConverter}}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="1*" />
+                        <ColumnDefinition Width="1*" />
                         <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
 
@@ -129,6 +130,13 @@
                         Style="{StaticResource SfButtonAdvNormalStyle}" />
                     <syncfusion:ButtonAdv
                         Grid.Column="2"
+                        cm:Message.Attach="[Event Click] = [Action OnPlayMod];"
+                        Background="#0d2905"
+                        IconTemplate="{StaticResource RefreshIconTemplate}"
+                        Label="{Binding Path=Play, Source={StaticResource Resources}}"
+                        Style="{StaticResource SfButtonAdvNormalStyle}" />
+                    <syncfusion:ButtonAdv
+                        Grid.Column="3"
                         cm:Message.Attach="[Event Click] = [Action OnDownloadMod];"
                         Background="#200708"
                         IconTemplate="{StaticResource DownloadIconTemplate}"
@@ -222,51 +230,67 @@
                     <Grid
                         Grid.Row="0"
                         Grid.Column="1"
-                        Margin="5">
+                        Margin="5"
+                        HorizontalAlignment="Stretch">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="2*" />
+                            <RowDefinition Height="1*" />
+                            <RowDefinition Height="1*" />
                             <RowDefinition Height="1*" />
                             <RowDefinition Height="1*" />
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
 
-                        <syncfusion:ButtonAdv
-                            Grid.Row="0"
-                            cm:Message.Attach="[Event Click] = [Action OnPlayMod];"
-                            Background="#0d2905"
-                            IconTemplate="{StaticResource PlayIconTemplate}"
-                            Label="{Binding Path=Play, Source={StaticResource Resources}}"
-                            Style="{StaticResource SfButtonAdvNormalStyle}" />
-
-                        <StackPanel
-                            Grid.Row="1"
-                            HorizontalAlignment="Center"
-                            Orientation="Horizontal">
-                            <CheckBox
-                                cm:Message.Attach="[Event Checked] = [Action OnDirectTxtChecked];"
-                                Content="Use -direct -txt"
-                                IsChecked="{Binding ShellViewModel.UserSettings.DirectTxt}"
-                                Style="{StaticResource CheckBoxStyle}" />
-                            <syncfusion:ButtonAdv
-                                cm:Message.Attach="[Event Click] = [Action OnCASCSettings];"
-                                Background="Transparent"
-                                IconTemplate="{StaticResource SettingsIconTemplate}"
-                                Style="{StaticResource SfButtonAdvSmallStyle}" />
-                        </StackPanel>
-
                         <Label
-                            Grid.Row="2"
+                            Grid.Row="0"
                             Content="{Binding Path=ModChoice, Source={StaticResource Resources}}"
                             FontWeight="Bold"
-                            Style="{StaticResource LabelHeaderStyle}" />
+                            Style="{StaticResource LabelHeaderStyle}" Padding="5,5,5,5" Margin="5,-15,5,0" />
                         <ComboBox
-                            Grid.Row="3"
+                            Grid.Row="1"
                             cm:Message.Attach="[Event SelectionChanged] = [Action OnModSelectionChanged];"
                             Background="#FF313030"
                             ItemsSource="{Binding InstalledMods}"
                             SelectedItem="{Binding SelectedMod}"
-                            Style="{StaticResource ComboBoxStyle}" />
+                            Style="{StaticResource ComboBoxStyle}" Margin="5,-10,5,10" Padding="3,2,2,2" />
+                        <StackPanel
+                            Grid.Row="2"
+                            HorizontalAlignment="Center"
+                            Orientation="Horizontal" Margin="0,-15,0,0">
+                            <Label
+                                Grid.Row="0"
+                                Content="Fast Load:"
+                                Style="{StaticResource LabelHeaderStyle}" Padding="5,5,5,5" />
+                            <TextBlock Grid.Row="0" Text="{Binding ShellViewModel.UserSettings.FastLoad}" VerticalAlignment="Center" TextAlignment="Left" Padding="0,5,0,5" Margin="-5,8,0,0" FontSize="16" FontWeight="Bold">
+                                <TextBlock.Style>
+                                    <Style TargetType="TextBlock">
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding ShellViewModel.UserSettings.FastLoad}" Value="On">
+                                                <Setter Property="Foreground" Value="Green"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding ShellViewModel.UserSettings.FastLoad}" Value="Off">
+                                                <Setter Property="Foreground" Value="Red"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </TextBlock.Style>
+                            </TextBlock>
 
+                            <syncfusion:ButtonAdv
+                                cm:Message.Attach="[Event Click] = [Action OnCASCSettings];"
+                                Background="Transparent"
+                                IconTemplate="{StaticResource SettingsIconTemplate}"
+                                Style="{StaticResource SfButtonAdvSmallStyle}" Margin="5,10,5,5" />
+                        </StackPanel>
+
+                        <StackPanel
+                            Grid.Row="3"
+                            HorizontalAlignment="Center"
+                            Orientation="Horizontal">
+                            <Label Content="Launch Mode:" Foreground ="Red" VerticalContentAlignment="Bottom"/>
+                        </StackPanel>
+                        <Grid Grid.Row="4" HorizontalAlignment="Stretch">
+                            <TextBox x:Name="textBoxArgs" Text="{Binding ShellViewModel.UserSettings.CurrentD2RArgs}" TextAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Height="25" VerticalAlignment="Top" Background="#FF313030" FontSize="11"/>
+                        </Grid>
                     </Grid>
 
                     <Grid
@@ -332,6 +356,7 @@
                         <CheckBox
                             Grid.Row="7"
                             HorizontalAlignment="Center"
+                            cm:Message.Attach="[Event Checked] = [Action OnMapRegenChecked]; [Event Unchecked] = [Action OnMapRegenChecked];"
                             Content="{Binding Path=Regen, Source={StaticResource Resources}}"
                             IsChecked="{Binding ShellViewModel.UserSettings.ResetMaps}"
                             Style="{StaticResource CheckBoxStyle}" />
