--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/CASCExtractor.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/CASCExtractor.xaml
@@ -8,7 +8,7 @@
     xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
     xmlns:dialogs="clr-namespace:D2RLaunch.ViewModels.Dialogs"
     Width="590"
-    Height="430"
+    Height="491"
     d:DataContext="{d:DesignInstance Type=dialogs:CASCExtractorViewModel,
                                      IsDesignTimeCreatable=True}"
     mc:Ignorable="d">
@@ -18,6 +18,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="25" />
+            <RowDefinition Height="20"/>
             <RowDefinition Height="25" />
             <RowDefinition Height="20"/>
             <RowDefinition Height="Auto" />
@@ -43,16 +45,16 @@
             <Label
                 Content="In order to enable 'Fast Load', you must first extract all D2R files from CASC Storage"
                 FontSize="12"
-                Style="{StaticResource LabelNormalStyle}" />
+                Style="{StaticResource LabelNormalStyle}" Height="20" Padding="5,0,5,0" />
             <Label
                 Content="Please be advised that this operation will need to be performed for EVERY mod you enable it for"
                 FontSize="12"
-                Style="{StaticResource LabelNormalStyle}" />
+                Style="{StaticResource LabelNormalStyle}" Height="20" Padding="5,0,5,0" />
             <Label
                 Content="Warning: This process requires ~40GB of data extracted and will take some time to complete"
                 FontSize="12"
                 Foreground="Red"
-                Style="{StaticResource LabelNormalStyle}" />
+                Style="{StaticResource LabelNormalStyle}" Height="20" VerticalAlignment="Center" Margin="5,5,5,5" Padding="5,0,5,0" />
             <Label
                 Content="{Binding DiskSpaceString}"
                 FontSize="12"
@@ -87,23 +89,18 @@
                 Background="#0d2905"
                 IconTemplate="{StaticResource ExportIconTemplate}"
                 Label="Extract CASC Data"
-                Style="{StaticResource SfButtonAdvNormalStyle}" />
+                Style="{StaticResource SfButtonAdvNormalStyle}" Margin="5,5,5,5" Padding="2,0,4,0" />
         </StackPanel>
 
-        <StackPanel
-            Grid.Row="4"
-            Orientation="Horizontal"
-            HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="132,0,0,20" Grid.RowSpan="2">
-            <Label
-                Content="Filename:"
-                FontSize="12"
-                Style="{StaticResource LabelHeaderStyle}"
-                Width="300"
-                HorizontalContentAlignment="Center" Padding="0,0,0,0" Margin="0,5,5,0"/>
-        </StackPanel>
+        <Label
+    Content="Filename:"
+    FontSize="12"
+    Style="{StaticResource LabelHeaderStyle}"
+    Width="Auto"
+    HorizontalContentAlignment="Center" Padding="0,0,0,0" Grid.Column="1" Margin="0,2,0,0" Grid.Row="6" VerticalAlignment="Top"/>
 
         <syncfusion:SfLinearProgressBar
-            Grid.Row="6"
+            Grid.Row="8"
             Grid.Column="0"
             Grid.ColumnSpan="3"
             Height="25"
@@ -113,7 +110,7 @@
             Style="{StaticResource SfLinearProgressBarStyle}" />
 
         <Label
-            Grid.Row="6"
+            Grid.Row="8"
             Grid.Column="0"
             Grid.ColumnSpan="3"
             HorizontalAlignment="Center"
@@ -122,7 +119,7 @@
             Foreground="DodgerBlue" FontSize="16" Margin="0,-2,0,0" />
 
         <StackPanel
-            Grid.Row="7"
+            Grid.Row="9"
             Grid.Column="0"
             Grid.ColumnSpan="3"
             Orientation="Horizontal">
@@ -134,7 +131,7 @@
         </StackPanel>
 
         <StackPanel
-            Grid.Row="7"
+            Grid.Row="9"
             Grid.Column="1"
             Orientation="Horizontal"
             HorizontalAlignment="Center">
@@ -146,7 +143,7 @@
         </StackPanel>
 
         <StackPanel
-            Grid.Row="7"
+            Grid.Row="9"
             Grid.Column="2"
             Orientation="Horizontal"
             HorizontalAlignment="Center">
@@ -164,31 +161,43 @@
             cm:Message.Attach="[Event Click] = [Action OnCascHelp];"
             Background="Transparent"
             IconTemplate="{StaticResource QuestionMarkIconTemplate}"
-            Style="{StaticResource SfButtonAdvSmallStyle}" Margin="-5,-15,0,0" Grid.Column="2" Grid.RowSpan="2" />
+            Style="{StaticResource SfButtonAdvSmallStyle}" Margin="2,-15,0,0" Grid.Column="2" Grid.RowSpan="2" />
         <Label
             d:Content="383838383"
             Content="{Binding FileName}"
             FontSize="12"
-            Style="{StaticResource LabelHeaderStyle}" Grid.Row="5" VerticalAlignment="Top" Width="570"
-            HorizontalContentAlignment="Center" Foreground="#FFA21903" Grid.ColumnSpan="3" HorizontalAlignment="Left" Margin="0,5,0,0" Padding="0,0,0,0"/>
+            Style="{StaticResource LabelHeaderStyle}" Grid.Row="6" VerticalAlignment="Top" Width="570"
+            HorizontalContentAlignment="Center" Foreground="#FFA21903" Margin="10,25,10,0" Padding="0,0,0,0" Grid.RowSpan="2" HorizontalAlignment="Stretch" Grid.ColumnSpan="3"/>
         <Label
                 d:Content="383838383"
                 Content="{Binding TotalFiles}"
                 FontSize="12"
-                Margin="5,22,0,0"
-                Style="{StaticResource LabelHeaderStyle}" Grid.Row="7" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.RowSpan="2" HorizontalContentAlignment="Center" Width="133" Foreground="#FFA21903"/>
+                Margin="0,28,0,0"
+                Style="{StaticResource LabelHeaderStyle}" Grid.Row="9" VerticalAlignment="Top" Grid.RowSpan="2" HorizontalContentAlignment="Center" Width="133" Foreground="#FFA21903"/>
         <Label
                 d:Content="383838383"
                 Content="{Binding FilesLeft}"
                 FontSize="12"
-                Margin="0,22,0,0"
-                Style="{StaticResource LabelHeaderStyle}" Grid.Column="1" Grid.Row="7" VerticalAlignment="Top" Grid.RowSpan="2" HorizontalContentAlignment="Center" Foreground="#FFA21903"/>
+                Margin="0,28,0,0"
+                Style="{StaticResource LabelHeaderStyle}" Grid.Column="1" Grid.Row="9" VerticalAlignment="Top" Grid.RowSpan="2" HorizontalContentAlignment="Center" Foreground="#FFA21903"/>
         <Label
                 d:Content="383838383"
                 Content="{Binding Extracted}"
                 FontSize="12"
-                Margin="0,22,0,0"
-                Style="{StaticResource LabelHeaderStyle}" Grid.Column="2" Grid.Row="7" VerticalAlignment="Top" Grid.RowSpan="2" Width="147" HorizontalContentAlignment="Center" Foreground="#FFA21903"/>
+                Margin="0,28,0,0"
+                Style="{StaticResource LabelHeaderStyle}" Grid.Column="2" Grid.Row="9" VerticalAlignment="Top" Grid.RowSpan="2" Width="147" HorizontalContentAlignment="Center" Foreground="#FFA21903"/>
+        <Label
+            Content="Status:"
+            FontSize="12"
+            Style="{StaticResource LabelHeaderStyle}"
+            Width="Auto"
+            HorizontalContentAlignment="Center" Padding="0,0,0,0" Grid.Column="1" Grid.Row="4" Margin="0,2,0,0" VerticalAlignment="Top"/>
+        <Label
+            d:Content="383838383"
+            Content="{Binding Status}"
+            FontSize="12"
+            Style="{StaticResource LabelHeaderStyle}" Grid.Row="4" VerticalAlignment="Top" Width="570"
+            HorizontalContentAlignment="Center" Foreground="#FF09920C" Padding="0,0,0,0" Grid.Column="1" Margin="0,25,0,0" Grid.RowSpan="2"/>
 
     </Grid>
 </Window>
