--- a/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Drawers/QoLOptionsDrawerView.xaml
@@ -12,7 +12,7 @@
     d:DataContext="{d:DesignInstance Type=drawers:QoLOptionsDrawerViewModel,
                                      IsDesignTimeCreatable=True}"
     d:DesignWidth="675"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Loaded="UserControl_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -85,6 +85,11 @@
 
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -379,7 +384,7 @@
                                 Height="40"
                                 DisplayMemberPath="Key"
                                 IsEnabled="{Binding ShellViewModel.ShowItemLevelsEnabled}"
-                                ItemsSource="{Binding EnabledDisabledOptions}"
+                                ItemsSource="{Binding EnabledDisabledModifyOptions}"
                                 SelectedIndex="{Binding ShellViewModel.UserSettings.ItemIlvls}"
                                 SelectedValuePath="Value"
                                 Style="{StaticResource ComboBoxStyle}" Background="#FF313030" />
@@ -507,18 +512,74 @@
                         SelectedIndex="{Binding ShellViewModel.UserSettings.ColorDye}"
                         SelectedValuePath="Value"
                         Style="{StaticResource ComboBoxStyle}" Background="#FF313030" />
-                        </StackPanel>
+                      </StackPanel>
+                        
                     </UniformGrid>
-
                     <Label
+                        Grid.Row="6"
+                        Content="Skill Buff Icons"
+                        FontWeight="Bold"
+                        Foreground="Goldenrod"
+                        Style="{StaticResource LabelHeaderStyle}" />
+                    <UniformGrid
                         Grid.Row="13"
+                        HorizontalAlignment="Center"
+                        Columns="2" Margin="0,15,0,0">
+                        <Label
+                            Margin="0,5,0,0"
+                            Content="Transmute:"
+                            FontWeight="Bold"
+                            Foreground="CornflowerBlue"
+                            Style="{StaticResource LabelHeaderStyle}" />
+                        <TextBox x:Name="kbBox1" TextWrapping="Wrap" Width="120" BorderThickness="1,1,1,1" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                        <Label
+                            Margin="0,5,0,0"
+                            Content="Sort Stash:"
+                            FontWeight="Bold"
+                            Foreground="CornflowerBlue"
+                            Style="{StaticResource LabelHeaderStyle}" />
+                        <TextBox x:Name="kbBox2" TextWrapping="Wrap" Width="120" BorderThickness="1,1,1,1" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                        <Label
+                            Margin="0,5,0,0"
+                            Content="Sort Inventory:"
+                            FontWeight="Bold"
+                            Foreground="CornflowerBlue"
+                            Style="{StaticResource LabelHeaderStyle}" />
+                        <TextBox x:Name="kbBox3" TextWrapping="Wrap" Width="120" BorderThickness="1,1,1,1" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                        <Label
+                            Margin="0,5,0,0"
+                            Content="Sort Cube:"
+                            FontWeight="Bold"
+                            Foreground="CornflowerBlue"
+                            Style="{StaticResource LabelHeaderStyle}" />
+                        <TextBox x:Name="kbBox4" TextWrapping="Wrap" Width="120" BorderThickness="1,1,1,1" PreviewKeyDown="TextBox_PreviewKeyDown"/>
+                    </UniformGrid>
+                    <Label
+                        Grid.Row="16"
+                        Margin="0,5,0,0"
+                        Content="Cinematic Subtitles"
+                        FontWeight="Bold"
+                        Foreground="Goldenrod"
+                        Style="{StaticResource LabelHeaderStyle}" Padding="5,5,5,5" />
+                    <ComboBox
+                        Grid.Row="17"
+                        Width="125"
+                        Height="40"
+                        DisplayMemberPath="Key"
+                        IsEnabled="True"
+                        ItemsSource="{Binding CinematicSubs}"
+                        SelectedIndex="{Binding ShellViewModel.UserSettings.CinematicSubs}"
+                        SelectedValuePath="Value"
+                        Style="{StaticResource ComboBoxStyle}" Background="#FF313030" />
+                    <Label
+                        Grid.Row="18"
                         Content="{Binding AuthorFiles, Source={StaticResource Resources}}"
                         FontWeight="Bold"
                         Foreground="DarkRed"
-                        Style="{StaticResource LabelHeaderStyle}" />
+                        Style="{StaticResource LabelHeaderStyle}" Margin="5,15,5,0" />
 
                     <UniformGrid
-                        Grid.Row="14"
+                        Grid.Row="19"
                         HorizontalAlignment="Center"
                         Columns="2">
 
